--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ link_directories(${THIRDPARTY}/Moby/build)
 set(box_srcs estimatefrict.cpp Box.cpp output.cpp)
 set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
 
-add_library(${PROJECT_NAME} ${box_srcs})
-#add_library(${PROJECT_NAME} ${hyq_srcs})
-target_link_libraries(${PROJECT_NAME} Moby)
+add_library(BOX${PROJECT_NAME} ${box_srcs})
+add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
+target_link_libraries(BOX${PROJECT_NAME} Moby)
+target_link_libraries(HYQ${PROJECT_NAME} Moby)
