BOX examples working, urdf reader not working, waiting on fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,6 @@ set(box_srcs estimatefrict.cpp Box.cpp output.cpp)
 set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
 
 add_library(BOX${PROJECT_NAME} ${box_srcs})
-#add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
+add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
 target_link_libraries(BOX${PROJECT_NAME} Moby Ravelin Opt)
-#target_link_libraries(HYQ${PROJECT_NAME} Moby)
+target_link_libraries(HYQ${PROJECT_NAME} Moby Ravelin Opt)
