--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,8 @@ set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
 
 add_library(BOX${PROJECT_NAME} ${box_srcs})
 add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
+add_library(RCH${PROJECT_NAME} RestingContact-test.cpp)
+
 target_link_libraries(BOX${PROJECT_NAME} Moby Ravelin Opt)
 target_link_libraries(HYQ${PROJECT_NAME} Moby Ravelin Opt)
+target_link_libraries(RCH${PROJECT_NAME} Moby Ravelin)
