debugged simple-PD, using box-feet HyQ

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ link_directories( /home/samzapo/ThirdParty/Ravelin/build /home/samzapo/ThirdPart
 # g++ -g0 -O3 -I/usr/include/libxml2 -I../../include -DBUILD_DOUBLE -DSAFESTATIC=static -DUSE_OSG -DUSE_GLPK PD-controller.cpp estimatefrict.cpp output.cpp -L../../../debug -lMoby -shared -o libcontroller.so
 set(box_srcs estimatefrict.cpp Box.cpp output.cpp)
 #set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
-set(hyq_srcs idyn.cpp PD-controller.cpp output.cpp)
+set(hyq_srcs simple-PD.cpp output.cpp)
 
 add_library(BOX${PROJECT_NAME} ${box_srcs})
 add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
