IK for LINKS coded but untested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,15 @@ add_definitions(-DSAFESTATIC=static)
 add_definitions(-DUSE_GLPK)
 
 include_directories(.)
-include_directories(/usr/include /usr/include/libxml2 /usr/local/include include ${Boost_INCLUDE_DIR} )
+include_directories( /usr/include /usr/include/libxml2 /usr/local/include include ${Boost_INCLUDE_DIR} )
 
-link_directories(/usr/local/lib)
+link_directories(/usr/local/lib )
 
 # g++ -g0 -O3 -I/usr/include/libxml2 -I../../include -DBUILD_DOUBLE -DSAFESTATIC=static -DUSE_OSG -DUSE_GLPK PD-controller.cpp estimatefrict.cpp output.cpp -L../../../debug -lMoby -shared -o libcontroller.so
 #set(box_srcs estimatefrict.cpp Box.cpp output.cpp)
 #set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
 #set(hyq_srcs simple-PD.cpp output.cpp)
-set(links_srcs Controller.cpp output.cpp estimatefrict.cpp idyn.cpp Visualization.cpp)
+set(links_srcs Controller.cpp output.cpp estimatefrict.cpp idyn.cpp Visualization.cpp StepBezier.cpp)
 
 #add_library(BOX${PROJECT_NAME} ${box_srcs})
 #add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
@@ -29,5 +29,5 @@ add_library(LINKS${PROJECT_NAME} ${links_srcs})
 
 #target_link_libraries(BOX${PROJECT_NAME} Moby Ravelin Opt)
 #target_link_libraries(HYQ${PROJECT_NAME} Moby Ravelin Opt)
-target_link_libraries(LINKS${PROJECT_NAME} Moby Ravelin Opt)
+target_link_libraries(LINKS${PROJECT_NAME} Moby Ravelin Opt glut GLU)
 #target_link_libraries(RCH${PROJECT_NAME} Moby Ravelin)
