--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,20 +12,21 @@ add_definitions(-DSAFESTATIC=static)
 add_definitions(-DUSE_GLPK)
 
 include_directories(.)
-include_directories( /usr/include /usr/include/libxml2 /usr/local/include include ${Boost_INCLUDE_DIR} )
+include_directories(/Applications/Mathematica.app/SystemFiles/IncludeFiles/C /usr/include /usr/include/libxml2 /usr/local/include include ${Boost_INCLUDE_DIR} )
 
-link_directories(/usr/local/lib )
+link_directories(/usr/local/lib /Applications/Mathematica.app/SystemFiles/Libraries/MacOSX-x86)
 
 # g++ -g0 -O3 -I/usr/include/libxml2 -I../../include -DBUILD_DOUBLE -DSAFESTATIC=static -DUSE_OSG -DUSE_GLPK PD-controller.cpp estimatefrict.cpp output.cpp -L../../../debug -lMoby -shared -o libcontroller.so
 #set(box_srcs estimatefrict.cpp Box.cpp output.cpp)
 #set(hyq_srcs estimatefrict.cpp PD-controller.cpp output.cpp)
 #set(hyq_srcs simple-PD.cpp output.cpp)
-set(links_srcs Controller.cpp output.cpp estimatefrict.cpp idyn.cpp Visualization.cpp StepBezier.cpp)
+set(links_srcs Controller.cpp output.cpp estimatefrict.cpp idyn.cpp Visualization.cpp StepBezier.cpp inverseKinematics.cpp)
 
 #add_library(BOX${PROJECT_NAME} ${box_srcs})
 #add_library(HYQ${PROJECT_NAME} ${hyq_srcs})
 add_library(LINKS${PROJECT_NAME} ${links_srcs})
 #add_library(RCH${PROJECT_NAME} RestingContact-test.cpp)
+#add_executable(lfIK lfIK.cpp)
 
 #target_link_libraries(BOX${PROJECT_NAME} Moby Ravelin Opt)
 #target_link_libraries(HYQ${PROJECT_NAME} Moby Ravelin Opt)
