refactored code, (kinematic mode not functional) on default controller, just PD control runs to maintain q0 (initial state)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ set(BUILD_DIRECTORY bin)
 set(SOURCE_DIRECTORY src)
 
 include_directories(
-/Users/samzapo/ThirdParty/Moby/include
+#/Users/samzapo/ThirdParty/Moby/include
 include /usr/include /usr/include/libxml2 /usr/local/include ${Boost_INCLUDE_DIR} /opt/local/include /opt/X11/include)
 
 link_directories(
-/Users/samzapo/ThirdParty/Moby/contact-reduce
+#/Users/samzapo/ThirdParty/Moby/contact-reduce
 /usr/local/lib /opt/local/lib /opt/X11/lib
 )
 
@@ -48,5 +48,5 @@ add_library(LinksColdetPlugin MODULE ${coldet_srcs})
 
 #target_link_libraries(BOX Moby Ravelin Opt)
 #target_link_libraries(HYQ Moby Ravelin Opt)
-target_link_libraries(LINKS Moby Ravelin Opt glut GLU osg osgDB OpenThreads)
-target_link_libraries(LinksColdetPlugin Moby Ravelin Opt glut GLU)
+target_link_libraries(LINKS Moby Ravelin  glut GLU osg osgDB OpenThreads dxl)
+target_link_libraries(LinksColdetPlugin Moby Ravelin  glut GLU)
