using ALGLIB for generating cubic splines.  Trade-off between (dis)continuous inter-spline velociy/acceleration, much choose one.  Will have to choose Velocity clamped cubic spline.  Debugged IK, NOTE: LinAlg::solve_fast(A,bx) corrupts A.  can't do interval-length splines (as opposed to phase length) unless acclelration and velocity are continuous (if not smooth).  Will have to use quintic splines to achieve this.

--- a/Examples/Quadruped/CMakeLists.txt
+++ b/Examples/Quadruped/CMakeLists.txt
@@ -64,11 +64,11 @@ include_directories(
                     ${Boost_INCLUDE_DIR}
                     /opt/local/include
                     /opt/X11/include
+                    ../../ThirdParty/alglib/src
                     )
 
 link_directories(
                   /usr/local/lib
-                  /opt/local/lib
                   /opt/X11/lib
                   )
 
@@ -79,6 +79,7 @@ set(SOURCES ../../src/output.cc
             ../../src/kinematics.cc
             ../../src/stabilization.cc
             ../../src/utilities.cc
+            ../../src/splines.cc
             ../../src/solve_qp.cc
             ../../src/Solvers.cpp
             ../../src/moby_callback.cc
@@ -100,8 +101,26 @@ set(SOURCES2 control_moby.cc
              stabilization.cc
             )
 
-          add_library(${PROJECT_NAME} MODULE ${SOURCES} ${SOURCES2})
-target_link_libraries(${PROJECT_NAME} Moby Ravelin glut GLU osg osgDB OpenThreads)
+set(THIRDPARTY
+                ../../ThirdParty/alglib/src/interpolation.cpp
+                ../../ThirdParty/alglib/src/integration.cpp
+                ../../ThirdParty/alglib/src/alglibinternal.cpp
+                ../../ThirdParty/alglib/src/alglibmisc.cpp
+                ../../ThirdParty/alglib/src/ap.cpp
+                ../../ThirdParty/alglib/src/dataanalysis.cpp
+                ../../ThirdParty/alglib/src/diffequations.cpp
+                ../../ThirdParty/alglib/src/fasttransforms.cpp
+                ../../ThirdParty/alglib/src/interpolation.cpp
+                ../../ThirdParty/alglib/src/linalg.cpp
+                ../../ThirdParty/alglib/src/optimization.cpp
+                ../../ThirdParty/alglib/src/solvers.cpp
+                ../../ThirdParty/alglib/src/specialfunctions.cpp
+                ../../ThirdParty/alglib/src/statistics.cpp
+                )
+
+add_library(${PROJECT_NAME} MODULE ${SOURCES} ${SOURCES2} ${THIRDPARTY})
+
+target_link_libraries(${PROJECT_NAME} Moby Ravelin glut osg osgDB GLU OpenThreads)
 
 if(DYNAMIXEL)
   target_link_libraries(${PROJECT_NAME} dxl)
