non-working environment_frame controller, actively debugging.  Now functional with Dynamixels

--- a/Control-Moby.config
+++ b/Control-Moby.config
@@ -1,5 +1,6 @@
 // ADD PREDEFINED MACROS HERE!
 #define VISUALIZE_MOBY
 #define USE_TERRAIN
-#define CONTROL_KINEMATICS
+#define SET_KINEMATICS
 #define COLLECT_DATA
+#define USE_ROBOT
