--- a/Examples/Quadruped/CMakeLists.txt
+++ b/Examples/Quadruped/CMakeLists.txt
@@ -115,7 +115,7 @@ set(THIRDPARTY
 
 add_library(${PROJECT_NAME} MODULE ${SOURCES} ${SOURCES2} ${THIRDPARTY})
 
-target_link_libraries(${PROJECT_NAME} Moby Ravelin Opt OpenThreads ${VISUALIZE_LIBS})
+target_link_libraries(${PROJECT_NAME} Moby Ravelin OpenThreads ${VISUALIZE_LIBS})
 
 if(DYNAMIXEL)
   target_link_libraries(${PROJECT_NAME} dxl)
