split controller into moby plugin and robot portions.  Still have to remove abrobot strusct from robot project

--- a/Control-Moby.config
+++ b/Control-Moby.config
@@ -1,7 +1,7 @@
 // ADD PREDEFINED MACROS HERE!
-#define VISUALIZE_MOBY
+//#define VISUALIZE_MOBY
 #define USE_TERRAIN
-#define SET_KINEMATICS
+//#define SET_KINEMATICS
 #define COLLECT_DATA
 #define USE_ROBOT
-#define PERTURB_CONTACT_DATA
+#define NDEBUG
